--- a/HH/templates/base.html
+++ b/HH/templates/base.html
@@ -35,6 +35,20 @@
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="{% url 'hh:index' %}">Главная</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="{% url 'hh:form' %}">Поиск</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="{% url 'hh:area_list' %}">Регионы</a></li>
+                        {% if user.is_authenticated %}
+                             <li class="nav-item">
+                                Привет, {{user.username}}
+                                <a class="nav-link" href="{% url 'users:logout' %}">Выход</a>
+                            </li>
+                            {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'users:login' %}">Вход</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'users:register' %}">Регистрация</a>
+                            </li>
+                {% endif %}
                     </ul>
                 </div>
             </div>
