--- a/HH/hhapp/templates/hhapp/about.html
+++ b/HH/hhapp/templates/hhapp/about.html
@@ -14,7 +14,7 @@
                     <div class="col-xl-15 col-lg-6 mx-auto">
                         <div class="bg-faded rounded p-5">
                             <h2 class="section-heading mb-4">
-                                Результаты запроса
+                                {{result|title}}
                             </h2>
                             <h3 class="section-heading">Параметры</h3>
                                 <ol class="list-group">
