--- a/HH/hhapp/templates/hhapp/area_list.html
+++ b/HH/hhapp/templates/hhapp/area_list.html
@@ -29,6 +29,23 @@
                                     <td><a href="{% url 'hhapp:area_delete' pk=item.pk%}">Удалить</a> </td>
                                 </tr>
                             {% endfor %}
+                         <div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
                         </tbody>
                     </table>
                     <a href="{% url 'hhapp:area_create' %}">Создать</a>
